# volto-authomatic

./: .editorconfig  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .project.eslintrc.js  .release-it.js  .release-it.json  0.a3b9f46062a0287e3751.manager.bundle.js  0.d55b91da8bb0ed9fdd6a.manager.bundle.js  1.b262b3b0820933ef3b00.manager.bundle.js  100.73fd09e7fb7a63353f97.manager.bundle.js  1220.e2375b84.iframe.bundle.js  124.e778a94b.iframe.bundle.js  1380.f5af7f15.iframe.bundle.js  1548.55b4f63b.iframe.bundle.js  1548.f8297a62.iframe.bundle.js  1594.4d118e2b.iframe.bundle.js  1640.910d20b1.iframe.bundle.js  1724.1bfdb2f6.iframe.bundle.js  1792.07309a61.iframe.bundle.js  1792.38b0b776.iframe.bundle.js  2275.73eae070.iframe.bundle.js  2313.0ec8ced5.iframe.bundle.js  2376.25590f7c.iframe.bundle.js  2376.e10d3af8.iframe.bundle.js  24.8bf23f1b.iframe.bundle.js  24.d313e950.iframe.bundle.js  2876.1a56e394.iframe.bundle.js  295.7a373acbb587bc32e5fd.manager.bundle.js  2962.167d3fd1.iframe.bundle.js  3.972d2369.iframe.bundle.js  3.972d2369.iframe.bundle.js.map  3496.2b62fb15.iframe.bundle.js  3496.fd3e6956.iframe.bundle.js  3516.6443768e.iframe.bundle.js  3516.6443768e.iframe.bundle.js.map  3614.a6cc3eac.iframe.bundle.js  3614.d044dcda.iframe.bundle.js  377.73a93b4733c4196d4d12.manager.bundle.js  (+330 more)
.github/workflows/: changelog.yml  code.yml  config.yml  main.yml  storybook.yml  unit.yml
cypress/tests/: example.cy.js
dockerfiles/: Dockerfile  Dockerfile.dev  docker-compose.yml  i18n.sh
docs/: LICENSE.md  Makefile  README.md  commit.hbs  pyproject.toml
docs/docs/: conf.py  glossary.md  index.md
docs/docs/concepts/: index.md
docs/docs/how-to-guides/: index.md
docs/docs/reference/: index.md
docs/docs/tutorials/: index.md
locales/: volto.pot
src/: index.js
src/actions/: index.js
src/components/: FallbackLogin.jsx  index.js
src/constants/: ActionTypes.js
src/icons/: index.js
src/reducers/: index.js
(+25 files in other folders)
